# chess960generator

./: CMakeLists.txt  README.md
src/: c960generator.cpp  c960generator.h
test/: main.cpp
